2010-03-01  David Bateman  <dbateman@free.fr>

	* Sparse.cc (Sparse<T>::maybe_delete_elements (idxx_vector&)):
	Special case the deletion of elements in sparse vectors.
	(Sparse<T>::index (idx_vector&, int) const): Special case indexing
	of sparse matrices with ranges with a step of 1.
	* Sparse.h: Include oct-mem.h for the copy_or_memcpy declaration.

2010-02-28  John W. Eaton  <jwe@octave.org>

	* Makefile.am ($(srcdir)/vx-op-inc.mk, $(srcdir)/mx-op-inc.mk,
	$(srcdir)/smx-op-inc.mk, $(srcdir)/vx-op-src.mk,
	$(srcdir)/mx-op-src.mk, $(srcdir)/smx-op-src.mk): New targets.

	* config-ops.sh: Accept top_srcdir argument.  Work from build
	directory too, not just source tree.

2010-02-28  Michael Goffioul  <michael.goffioul@gmail.com>

	* Array-C.cc (DiagArray2<Complex>::Proxy): Remove explicit
	instantiation under MSVC.
	Array-d.cc (DiagArray2<double>::Proxy): Ditto.
	Array-f.cc (DiagArray2<float>::Proxy): Ditto.
	Array-fC.cc (DiagArray2<FloatComplex::Proxy): Ditto.

2010-02-28  Jaroslav Hajek  <highegg@gmail.com>

	* Array-util.cc (gripe_index_out_of_range): Throw errors with id.
	(gripe_nonconformant): Likewise.
	(error_id_index_out_of_bounds, error_id_invalid_index,
	error_id_nonconformant_args): New variables.
	(gripe_invalid_index): New function.
	* Array-util.h: Declare them.
	* Array.cc (Array<T>::checkelem): Throw invalid-index when negative
	indices are encountered.

2010-02-27  John W. Eaton  <jwe@octave.org>

	* Sparse.cc (Sparse<T>::diag): Handle case of diag (szv) when szv
	is a sparse vector with nnz = 0.

2010-02-27  Jaroslav Hajek  <highegg@gmail.com>

	* Array-util.cc (gripe_index_out_of_range): New function.
	* Array.cc (Array<T>::range_error): Remove.
	(Array<T>::checkelem): Rewrite.
	(Array<T>::index, Array<T>::delete_elements): Simplify.
	* DiagArray2.cc (DiagArray2::checkelem): Use gripe_index_out_of_range.
	* Range.cc (Range::checkelem, Range::index): Ditto.

2010-02-26  Jaroslav Hajek  <highegg@gmail.com>

	* mx-inlines.cc (OP_DUP_FCN): Remove.