@@ -211,6 +211,7 @@ INCS = \
   mach-info.h \
   oct-alloc.h \
   oct-cmplx.h \
+  oct-convn.h \
   oct-env.h \
   oct-fftw.h \
   oct-group.h \
@@ -425,6 +426,7 @@ LIBOCTAVE_CXX_SOURCES = \
   lo-utils.cc \
   mach-info.cc \
   oct-alloc.cc \
+  oct-convn.cc \
   oct-env.cc \
   oct-fftw.cc \
   oct-glob.cc \
